<resources>
    <string name="app_name">TheDrinkBook</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="buy">Buy</string>
    <string name="logout">Logout</string>
    <string name="chosen">You have chosen:</string>
    <string name="totalValue">Total value:</string>
    <string name="buytext">"When pressing \"pay\" MobilePay will automatically open. When the payment is completed The Drink Book will automatically open again. "</string>
    <string name="completed">Payment is completed</string>
    <string name="save">Save</string>
    <string name="save_refilling">Save refilling</string>
    <string name="update_stock">Update stock</string>
    <string name="Add_product">Add product</string>
    <string name="Delete_Product">Delete product</string>
    <string name="addproduct">Add product</string>
    <string name="Name">Product name</string>
    <string name="Product_price">Price</string>
    <string name="Picture_drink">Picture</string>
    <string name="merchant_id_generic" translatable="false">APPDK0000000000</string>
    <string name="ok">OK</string>
    <string name="pay">Pay</string>
    <string name="no_chosen_items">No item(s) chosen</string>
    <string name="empty_database">There\'s not enough left of: %1$s</string>
    <string name="imageview_description">This is an icon representing the product</string>
    <string name="drink_name">Drink name</string>
    <string name="drink_amount" translatable="false">00</string>
    <string name="youve_chosen">You\'ve chosen</string>
    <string name="payment_form">Payment form</string>
    <string name="imageview_mobilepay_description">An icon from MobilePay</string>
    <string name="total_price">Total price:</string>
    <string name="mobilepay_description">When you push \"PAY\", you\'ll be send to the MobilePay app. The Drink Book will reopen when the payment is done.</string>
    <string name="iconError">Please take a photo before saving the new product</string>
    <string name="no_connection">No connection to network</string>
    <string name="failed_authentification">Authentication failed</string>
    <string name="required_field">Required</string>
    <string name="refill">Change stock</string>
    <string name="cancel">Cancel</string>
    <string name="add_productname">Add product name</string>
    <string name="add_productprice">Add product price</string>
    <string name="add_priceNotnegativ">The product price have to be positiv</string>
    <string name="add_productIcon">Add icon to product</string>
    <string name="lessthanfivedrinksleft">There is now less than 5 drinks of</string>
    <string name="Paymentfailed">Payment failed</string>
    <string name="paymentCanceled">Payment canceled</string>
    <string name="titleActionDialog">Delete product</string>
    <string name="Teksttilactiondialog">Do you want to delete the product?</string>
    <string name="Duslettedeprodukt">You deleted the product</string>
    <string name="duslettedeikkeproduktet">You did not delete the product</string>
    <string name="Ja">Yes</string>
    <string name="Nej">No</string>
    <string name="notification_description">Notification from TheDrinkBook</string>
</resources>
