<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thedrinkbook.AddDrinksActivity">

    <Button
        android:id="@+id/bntDeleteProduct"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:background="#c3dceb"
        android:text="@string/Delete_Product"
        android:textColor="#17637d"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntCancelAdmin" />

    <Button
        android:id="@+id/bntAddProduct"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="#c3dceb"
        android:text="@string/Add_product"
        android:textColor="#17637d"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntSaveAddProduct" />

    <Button
        android:id="@+id/bntSaveAddProduct"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="#c3dceb"
        android:text="@string/save_refilling"
        android:textColor="#17637d"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvAddDrinksAdmin" />

    <ListView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="1504dp"
        tools:layout_editor_absoluteY="256dp" />

    <ListView
        android:id="@+id/lvAddDrinksAdmin"
        android:layout_width="368dp"
        android:layout_height="305dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_stock"
        android:textColor="#17637d"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/bntCancelAdmin"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:background="#c3dceb"
        android:text="@string/cancel"
        android:textColor="#17637d"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvAddDrinksAdmin" />

</android.support.constraint.ConstraintLayout>
