<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgSodaicon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageview_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txtDrinkname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/drink_name"
        app:layout_constraintStart_toEndOf="@+id/imgSodaicon"
        app:layout_constraintTop_toTopOf="@+id/imgSodaicon" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/txtDrinkPrice"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDrinkPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Product_price"
        app:layout_constraintBottom_toBottomOf="@+id/imgSodaicon"
        app:layout_constraintStart_toStartOf="@+id/txtDrinkname"
        app:layout_constraintTop_toBottomOf="@+id/txtDrinkname" />

</android.support.constraint.ConstraintLayout>